--- a/Barilnik.Nsudotnet.WebAfisha/Afisha/Afisha/Views/Performers/Index.cshtml
+++ b/Barilnik.Nsudotnet.WebAfisha/Afisha/Afisha/Views/Performers/Index.cshtml
@@ -12,7 +12,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.ActionLink("Name", "Index")
+            Имя исполнителя
+        </th>
+        <th>
+            Страна исполнителя
+        </th>
+        <th>
+            Жанр
         </th>
        
     </tr>
